# stocksense-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mlflow.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
api/: main.py
app/: streamlit_app.py
data/sample/: sample_inventory.csv
scripts/: generate_sample_data.py  run_forecasting_demo.py  run_kpi_demo.py  run_mlflow_forecasting_experiment.py  run_recommendation_demo.py
src/analytics/: kpi_engine.py
src/chatbot/: agent.py  llm_adapter.py  tools.py
src/data/: validation.py
src/models/: forecast_evaluation.py  forecasting_engine.py
src/recommendations/: recommendation_engine.py
stocksense_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_api.py  test_chatbot_agent.py  test_forecast_evaluation.py  test_forecasting_engine.py  test_kpi_engine.py  test_llm_adapter.py  test_recommendation_engine.py  test_validation.py
