[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stocksense-ai"
version = "0.1.0"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "fastapi",
    "streamlit"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]